--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Titre</title>
 		<style>
 			body{
-				background-color:#2ecc71;
+				background-color:red;
 				color:white;
 			}
 		</style>
